--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn ./src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
-    "test": "NODE_ENV=test jest --runInBand --detectOpenHandles"
+    "test": "yarn jest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jest": "^29.0.3",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
@@ -24,11 +25,14 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
-    "@types/jest": "26.0.21",
+    "@types/jest": "^29.0.1",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.35",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.0",
-    "jest": "^26.0.1",
+    "supertest": "^6.2.4",
+    "ts-jest": "^29.0.0",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
   }
